--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -65,24 +65,26 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="viewport" content="width=device-width">
 	<title>开始使用 - Gennia 官方网站</title>
-	<link href="../assets/css/semantic.min.css" rel="stylesheet">
-	<link href="../assets/css/reqwey.min.css" rel="stylesheet">
-	<link href="../assets/css/sweetalert2.min.css" rel="stylesheet">
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/semantic.min.js"></script>
-	<script src="../assets/js/sweetalert2.min.js"></script>
-	<script src="../assets/js/marked.min.js"></script>
-	<link rel="shortcut icon" type="image/png" href="../assets/img/favicon.png">
+	<link href="assets/css/semantic.min.css" rel="stylesheet">
+	<link href="assets/css/reqwey.min.css" rel="stylesheet">
+	<link href="assets/css/sweetalert2.min.css" rel="stylesheet">
+	<link href="assets/css/katex.min.css" rel="stylesheet">
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/semantic.min.js"></script>
+	<script src="assets/js/sweetalert2.min.js"></script>
+	<script src="assets/js/marked.min.js"></script>
+	<script src="assets/js/katex.min.js"></script>
+	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
 	<div class="wrapper">
-		<div id="web_bg" style="background-image: url('../assets/img/background.webp');">
+		<div id="web_bg" style="background-image: url('assets/img/background.webp');">
 		</div>
 		<div class="ui fixed borderless unstackable menu" style="position: fixed; min-height: 49px; ">
 			<div class="ui container">
 	
-				<div class="header item" onclick="window.location.href='../index.html'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="../assets/img/logo.png"
+				<div class="header item" onclick="window.location.href='index.html'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="assets/img/logo.png"
 						style="width: 150px; margin-top: -10px; margin-bottom: -20px; "></div>
 				<a class="aa active item" href="quick-start/index.html">开始使用</a>
 				<a class="aa item" href="server/index.html">独立服务端</a>
@@ -129,7 +131,7 @@
 					</div>
 					<div class="ui horizontal list">
 						<a class="item" href="#">About Us</a>
-						<a class="item" href="#">Jobs</a>
+						<a class="item" href="#">By Me a Coffee</a>
 					</div>
 				</div>
 	
@@ -137,17 +139,11 @@
 		</div>
 	</div>
 
-	
-	<script data-cfasync="false"
-		src="https://static.cspoi.net/syzoj-public-cdn/1.1.0/cdnjs/semantic-ui/2.4.1/semantic.min.js"></script>
-	<script src="https://static.cspoi.net/syzoj-public-cdn/1.1.0/cdnjs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
-	<script src="https://static.cspoi.net/syzoj-public-cdn/1.1.0/self/script.js?20170710"></script>
 	<script type="text/javascript">
 		(async () => {
 			let req = await fetch('index.md')
 			let md = await req.text()
-			document.getElementById('MdContainer').innerHTML =
-				marked.parse(md);
+			document.getElementById('MdContainer').innerHTML = await marked.parse(md);
 		})()
 	</script>
 </body>
