--- a/bot-api/index.html
+++ b/bot-api/index.html
@@ -64,7 +64,7 @@
 	</style>
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="viewport" content="width=device-width">
-	<title>开始使用 - Gennia 官方网站</title>
+	<title>Bot 开放平台 - Gennia 官方网站</title>
 	<link href="/assets/css/semantic.min.css" rel="stylesheet">
 	<link href="/assets/css/reqwey.min.css" rel="stylesheet">
 	<link href="/assets/css/sweetalert2.min.css" rel="stylesheet">
@@ -86,9 +86,9 @@
 	
 				<div class="header item" onclick="window.location.href='index.html'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="/assets/img/logo.png"
 						style="width: 150px; margin-top: -10px; margin-bottom: -20px; "></div>
-				<a class="aa active item" href="/quick-start/index.html">开始使用</a>
+				<a class="aa item" href="/quick-start/index.html">开始使用</a>
 				<a class="aa item" href="/server/index.html">独立服务端</a>
-				<a class="aa item" href="/bot-api/index.html">Bot 开放平台</a>
+				<a class="aa active item" href="/bot-api/index.html">Bot 开放平台</a>
 				<div class="aa right menu">
 	
 					<div class="item">
