--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 	
 				<div class="header item" onclick="window.location.href='index.html'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="/assets/img/logo.png"
 						style="width: 150px; margin-top: -10px; margin-bottom: -20px; "></div>
-				<a class="aa item" href="quick-start/index.html">开始使用</a>
-				<a class="aa item" href="server/index.html">独立服务端</a>
-				<a class="aa item" href="bot-api/index.html">Bot 开放平台</a>
+				<a class="aa item" href="/quick-start/index.html">开始使用</a>
+				<a class="aa item" href="/server/index.html">独立服务端</a>
+				<a class="aa item" href="/bot-api/index.html">Bot 开放平台</a>
 				<div class="aa right menu">
 	
 					<div class="item">
