--- a/bot-api/index.html
+++ b/bot-api/index.html
@@ -84,11 +84,11 @@
 		<div class="ui fixed borderless unstackable menu" style="position: fixed; min-height: 49px; ">
 			<div class="ui container">
 	
-				<div class="header item" onclick="window.location.href='index.html'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="/assets/img/logo.png"
+				<div class="header item" onclick="window.location.href='/'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="/assets/img/logo.png"
 						style="width: 150px; margin-top: -10px; margin-bottom: -20px; "></div>
-				<a class="aa item" href="/quick-start/index.html">开始使用</a>
-				<a class="aa item" href="/server/index.html">独立服务端</a>
-				<a class="aa active item" href="/bot-api/index.html">Bot 开放平台</a>
+				<a class="aa item" href="/quick-start">开始使用</a>
+				<a class="aa item" href="/server">独立服务端</a>
+				<a class="aa active item" href="/bot-api">Bot 开放平台</a>
 				<div class="aa right menu">
 	
 					<div class="item">
