--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 		<div class="ui fixed borderless unstackable menu" style="position: fixed; min-height: 49px; ">
 			<div class="ui container">
 	
-				<div class="header item" onclick="window.location.href='index.html'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="/assets/img/logo.png"
+				<div class="header item" onclick="window.location.href='/'" style="cursor: pointer"><img alt='Gennia' title="Gennia" src="/assets/img/logo.png"
 						style="width: 150px; margin-top: -10px; margin-bottom: -20px; "></div>
-				<a class="aa item" href="/quick-start/index.html">开始使用</a>
-				<a class="aa item" href="/server/index.html">独立服务端</a>
-				<a class="aa item" href="/bot-api/index.html">Bot 开放平台</a>
+				<a class="aa item" href="/quick-start">开始使用</a>
+				<a class="aa item" href="/server">独立服务端</a>
+				<a class="aa item" href="/bot-api">Bot 开放平台</a>
 				<div class="aa right menu">
 	
 					<div class="item">
@@ -146,7 +146,7 @@
 					<div class="twelve wide right aligned column">
 						<h2>随时随地，开箱即用</h2>
 
-						无论是局域网互联，还是连接至公用的 <a class="req" href="server/index.html">GenniaServer</a>，Gennia 都能胜任。
+						无论是局域网互联，还是连接至公用的 <a class="req" href="server">GenniaServer</a>，Gennia 都能胜任。
 					</div>
 				</div>
 				<div class="fadeInUp ui grid segment">
