--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -86,7 +86,7 @@
 			}
 		});
 	</script>
-	<script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS-MML_CHTML"></script>
+	<script async src="https://cdn.bootcss.com/mathjax/2.7.9/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	<link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
 </head>
 
