--- a/server/index.html
+++ b/server/index.html
@@ -134,7 +134,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="fadeInUp ui segment" id="MdContainer"></div>
+				<div class="fadeInUp ui font-content segment" id="MdContainer"></div>
 				<div class="ui vertical footer segment" style="margin-top: 15px; ">
 					<div class="ui right floated horizontal list">
 						<div class="disabled item" href="#">© Gennia Developing Team</div>
