--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 	
 		<div style="margin-top: 77px; ">
 			<div class="ui main container">
-				<div class="fadeInUp ui grid segment" style="background-image: url(/assets/img/Transgender_Pride_flag.svg);">
+				<div class="fadeInUp ui grid segment" style="display: flex; align-items: center;background-image: url(/assets/img/Transgender_Pride_flag.svg);">
 					<div class="twelve wide left aligned column">
-						<h4>不向焦虑与抑郁投降，这个世界终会有我们存在的地方</h4>
+						<h4 style="margin-bottom: 0">不向焦虑与抑郁投降，这个世界终会有我们存在的地方</h4>
 					</div>
 					<div class="four wide right aligned column">
 						<a class="ui req tiny button" style="display: flex;align-items: center;justify-content: center;" href="https://github.com/GenniaApp/Gennia/releases/download/1.0.7/Gennia.Setup.1.0.7-pride.exe">
