Add title picture

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 					</div>
 				</div>
 				<div class="fadeInUp ui center aligned vertical segment">
+					<img src="/assets/img/main.png" height="444" style="border-radius: 5px; -webkit-box-shadow: 0 4px 8px rgb(0 0 0 / 4%), 0 0 2px rgb(0 0 0 / 6%), 0 0 1px rgb(0 0 0 / 4%);box-shadow: 0 4px 8px rgb(0 0 0 / 4%), 0 0 2px rgb(0 0 0 / 6%), 0 0 1px rgb(0 0 0 / 4%);">
 					<h1>轻量级 Generals.io 游戏引擎。由 <a class="req" href="https://electronjs.org">Electron</a> 驱动。</h1>
 					<div class="ui large buttons">
 						<a class="ui disabled button" style="max-width: 200px;display: flex;align-items: center;justify-content: center;" href="https://github.com/GenniaApp/Gennia/releases/download/1.0.7/Gennia.Setup.1.0.7.exe">
